--- a/PyTorch_Translation.ipynb
+++ b/PyTorch_Translation.ipynb
@@ -522,17 +522,17 @@
         "\n",
         "        tgt_positions = torch.arange(0, tgt_seq_length).unsqueeze(1).expand(tgt_seq_length, N).to(self.device)  #Create positions for tgt embedding\n",
         "\n",
-        "        src = self.dropout(self.src_word_embedding(src) + self.src_position_embedding(src_positions))   # So that the network is aware of the order of words\n",
+        "        emb_src = self.dropout(self.src_word_embedding(src) + self.src_position_embedding(src_positions))   # So that the network is aware of the order of words\n",
         "        \n",
-        "        tgt = self.dropout(self.tgt_word_embedding(tgt) + self.tgt_position_embedding(tgt_positions))   # So that the network is aware of the order of words\n",
+        "        emb_tgt = self.dropout(self.tgt_word_embedding(tgt) + self.tgt_position_embedding(tgt_positions))   # So that the network is aware of the order of words\n",
         "\n",
         "        src_padding_mask = self.make_src_mask(src)\n",
         "        tgt_mask = self.transformer.generate_square_subsequent_mask(tgt_seq_length).to(self.device)  # We mask the target input to the decoder so that the 1st output of the decoder only \n",
         "                                                                                                     # had access to the 1st element and then the 2nd output only had access to the 1st and \n",
         "                                                                                                     # 2nd input to the decoder.\n",
         "        out = self.transformer(\n",
-        "            src,\n",
-        "            tgt,\n",
+        "            emb_src,\n",
+        "            emb_tgt,\n",
         "            src_key_padding_mask=src_padding_mask,\n",
         "            tgt_mask=tgt_mask,\n",
         "        )\n",
